hphp/test/zend/good/Zend/tests/bug42817.php.expectf

Fatal error: clone called on non-object in %s/bug42817.php on line 2
